Add real compliments
With two versions of the one audio compliment we have so far (MP3 and
Ogg Vorbis; FLAC was barely smaller than WAV so I don’t think a lossless
version is worth it) and two versions of the video compliment as well
(I hope most browsers support at least one of the two formats). I didn’t
add any image sizes yet, I’ll do that separately and then also include
downsized versions of any larger images. (The one PNG has already been
run through pngcrush, though, there’s no need to let the uncrushed
version bloat the Git history.)

The order of the compliments has been randomized to obfuscate in what
order they were submitted.

--- a/index.html
+++ b/index.html
@@ -250,51 +250,427 @@ via Wikimedia Commons`;
 
 			const compliments = [
 				{
-					text: 'Here goes the text for a short compliment.',
-				},
-				{
-					text: 'Dies ist der Text für ein kurzes Kompliment',
+					text: 'Toll, dass du mich so selten mit Hitler verglichen hast!',
 					textLang: 'de',
-					author: 'Verfasser',
+					author: 'Der Vorsitzende',
 					authorLang: 'de',
 				},
 				{
-					text: 'Here goes the text for a very long compliment that spans multiple lines and talks about how great Jens is.',
-					image: 'Placeholder.png',
-					imageSrcset: {
-						240: 'Placeholder-240.png',
-					},
-					imageAlt: 'Placeholder',
-					imageWidth: 480,
-					imageHeight: 480,
+					text: "Jens, I'd like to thank you for all the contributions you've made at the Wikibase Live sessions. I’ve learned a lot from working with you over the months. Congratulations on your new job. We will remember you with warm thoughts and memories.",
+					image: '776342f0-86f5-4522-84c9-a02d6b11c766.jpg',
+					author: 'Mohammed',
 				},
 				{
-					image: 'Placeholder.png',
-					imageSrcset: {
-						240: 'Placeholder-240.png',
-					},
-					imageWidth: 480,
-					imageHeight: 480,
-					author: 'Test Author',
+					text: "You've always been the best Bard of the team, singing beautiful songs about Wikidata all around the world!",
+					image: 'IMG_20170413_101601.jpg',
+					author: 'Léa',
 				},
 				{
-					audio: 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.wav',
-					author: 'Test Recorder',
+					text: 'Dein Einsatz für freies Wissen ist wunderbar.',
+					textLang: 'de',
 				},
 				{
+					text: 'You are brave, so whatever it is: go, do it!',
+				},
+				{
+					text: 'Ein Dienstag ohne BSJF ist doch auch kein richtiger Dienstag. Vielen Dank für all die so sinngebenden Sinnlosgespräche!',
+					textLang: 'de',
+				},
+				{
+					text: 'Jens, vielen Dank für alles, was du für Wikidata, Wikibase, WMDE und natürlich dem Betriebsrat getan hast! Du wirst mir und uns fehlen!',
+					textLang: 'de',
+					author: 'Lea',
+					textLang: 'de',
+				},
+				{
+					text: 'Memes fade out too fast, but this one will live forever <3',
 					audio: {
-						'audio/flac': 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.flac',
-						'audio/ogg; codecs=opus': 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.opus',
-						'audio/ogg; codecs=vorbis': 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.ogg',
-						'audio/mpeg': 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.mp3',
-						'audio/x-wav': 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.wav',
+						'audio/ogg; codecs=opus': 'Toss a coin.opus',
+						'audio/mpeg': 'Toss a coin.mp3',
 					},
+					author: 'Léa',
 				},
 				{
-					video: 'Chen-Gackstatter_surface.webm',
-					videoWidth: 1080,
-					videoHeight: 1080,
+					text: 'Group Hug!  Ok, proceed.',
 				},
+				{
+					text: 'Jenseblümchen, San Frantschüssco, Tschüssikowski und hoffentlich bis Baldrian!',
+					textLang: 'de',
+					image: '6231396458236133.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Lieber Jens, viel zu kurz waren meine Monate bei Wikimedia, um genug von Dir zu lernen! Bin mir aber sicher, dass Deine Gedanken, Deine Art zu kommunizieren und Dein Wissen sich langfristig in die DNA von Wikimedia und alle Kooperationspartner hineingefunden haben :-).  Ich wünsche Dir einen bezaubernden Start im neuen Job ("aller Anfang wohnt ein Zauber inne..." Hesse? oder  Fontane?). Herzlich,',
+					textLang: 'de',
+					author: 'Maiken',
+					authorLang: 'de',
+				},
+				{
+					text: 'Ohne dich wüsste ich heute nicht, wer die Berlin Bombshells sind und eine faszinierende Sportart wäre mir unbekannt geblieben. (Foto: 18.11.2012)',
+					textLang: 'de',
+					image: 'IMG_20121118_190153.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'Nicht nur bei unserer ersten WMDE Weihnachtsfeier hast du deine Kochkünste bewiesen. (Foto: 02.11.2012)',
+					textLang: 'de',
+					image: 'IMG_20121102_152852.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'Ich mag dein interface!',
+					textLang: 'de',
+				},
+				{
+					text: 'Du bist der Ersteller der besten OKCupid-Profile!',
+					textLang: 'de',
+					author: 'Fieser Mops',
+					authorLang: 'de',
+				},
+				{
+					text: 'Without you, this place will be different. I will miss you very much!',
+					image: 'giphy.gif',
+				},
+				{
+					text: 'Bist der beste tech zu non-tech Übersetzer wo gibt.',
+					textLang: 'de',
+					author: 'Linda',
+					authorLang: 'de',
+				},
+				{
+					text: 'Johl, dein Ukulenlenspiel erwärmt Herzen und Mitgliederversammlungen. #Bambärch',
+					textLang: 'de',
+					image: 'IMG_20170617_211229.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Dear Jens! You are a great colleague, a person with wikipedia-level knowledge in your head, and you have a wonderful sense of humour! Your new colleagues will be lucky to have you!',
+					author: 'Elena',
+				},
+				{
+					text: 'werde ich jemals wieder einen Arbeitskollegen haben, der kpop mag ㅠㅠ',
+					textLang: 'de',
+				},
+				{
+					text: 'Thank you soo much Jens for all the hard work and the years of work in wikimedia DE. We did not get to work closely together but I a big fan of your way of doing presentations. you always had a way of making them funny and easy to understand, even the very technical topics. I wish you the best for what is coming next.',
+					author: 'Rosalie.',
+				},
+				{
+					text: 'Ich hätte gern immer einen Jens in der Tasche, um Open-Data-Skeptiker zu überwältigen, zu überzeugen, zu begeistern. Danke für jeden gemeinsamen Besuch und immer das Bewusstsein, mich auf dich verlassen zu können!',
+					textLang: 'de',
+					author: 'Bernd',
+					authorLang: 'de',
+				},
+				{
+					text: 'Jens has the most ingenious comical timing',
+				},
+				{
+					text: 'Lieber Jens, ich danke dir insbesondere für deinen Einsatz im Betriebsrat und deine klare politische Haltung, sowohl zu Themen die uns bei Wikimedia Deutschland direkt betrafen, als auch zu solchen, die uns gesellschaftlich beeinflussten. Deine unterhaltsame, humorvolle und sehr verständliche Vermittlung der Arbeit und der Produkte des Bereichs Software, werde ich sehr vermissen. Alles Gute und viel Erfolg für die Zukunft!',
+					textLang: 'de',
+					author: 'Nico aus der Ideenförderung',
+					authorLang: 'de',
+				},
+				{
+					text: `We'll miss you!" }; DROP TABLE approved_resignations; INSERT INTO active_employees VALUES ("Ohlig", "Jens", "awesome", "reinstated", "2020-11-25 00:00:00");`,
+				},
+				{
+					text: "Lieber Jens, am letzten Weihnachtsfest hast Du mir gesagt, in Deiner Vorstellung könnte ich eine Musikerin sein, aber Du wüßtest es nicht, weil ich das nicht zeigen würde. Danke für diesen Trigger! Ich habe mit meiner Schüchternheit gerungen, ein wenig mehr Bass Spielen & singen geübt und ich kann mit diesem ersten Video soweit leben, dass ich es Dir zeigen möchte. Es ist nicht perfekt & der Sound am besten mit Kopfhörern zu hören. But it's a start. Machs gut & danke für den Fisch!",
+					textLang: 'de',
+					video: {
+						'video/mp4': 'wag ur tail.mp4',
+						'video/webm': 'wag ur tail.webm',
+					},
+					videoWidth: 1280,
+					videoHeight: 720,
+					author: 'Noëlle',
+					authorLang: 'de',
+				},
+				{
+					text: 'Du bist mein allerbester Erinnerungspartner an abseitige und nerdige Dinge aus den 80er Jahren.',
+					textLang: 'de',
+					author: 'Christof',
+					authorLang: 'de',
+				},
+				{
+					text: 'I will forever remain envious of the breadth and depths of your knowledge',
+					image: 'so smart.gif',
+					author: 'Kris',
+				},
+				{
+					text: 'Thank you for teaching us so much about the future.',
+					audio: {
+						'audio/ogg; codecs=vorbis': 'Everybody Gets A Kitten.ogg',
+						'audio/mpeg': 'Everybody Gets A Kitten.mp3',
+					},
+					author: 'Lucas',
+				},
+				{
+					text: 'Ich bin mir sicher ohne dich, würde ich Berlin heute nicht so gut kennen (und nicht so schätzen). Danke! (Foto: 23.09.2013)',
+					textLang: 'de',
+					image: 'C360_2013-09-23-18-27-48-702.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: "Thanks for all the time spent together in the same room! Thanks for our discussions about everything, from politics to Game of Thrones, in multiple languages, for the support when I needed it. We'll miss you in the Château <3",
+					image: 'IMG_20180102_104106.jpg',
+					author: 'Léa',
+				},
+				{
+					text: 'Du bist eine wundervoller SPARQL!',
+					textLang: 'de',
+				},
+				{
+					text: 'Du machst einfach das beste KETCHUP CHICKEN!',
+					textLang: 'de',
+					author: 'Fieser Mops',
+					authorLang: 'de',
+				},
+				{
+					text: "Good morning, stunner. You're just getting started.Your age doesn't matter. The sun is up, the day is new. You're just getting started.",
+					author: 'Lin-Manuel Miranda',
+				},
+				{
+					text: 'Thanks for always bringing your grin and giggles to our morning check-ins! ',
+					author: 'George',
+				},
+				{
+					text: 'Where would be brie without you?',
+					image: 'brie.jpg',
+				},
+				{
+					text: 'You can always surprise a person by knowing their local political situation even if they are from less well known countries.',
+				},
+				{
+					text: "Vi estas mirinda enkondukanto de Pa'amaim-Nekudotaim",
+					textLang: 'eo',
+				},
+				{
+					text: 'Nobody does it feta',
+					image: 'feta_cheese.jpg',
+				},
+				{
+					text: 'Jens is always so helpful and informative, we will miss you!',
+				},
+				{
+					text: 'Really enjoyed interacting with him the few times I had the chance. Very sorry to see him go, but wishing him all the best for his very next steps!',
+				},
+				{
+					text: 'Jenseblümchen! Jedes Duett mit dir bleibt unvergessen und unerreicht.',
+					textLang: 'de',
+					image: 'IMG_20170510_003740.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Freudige Momente bei jedem Hackathon: Der Moment, wo von irgendwoher plötzlich Ukulelenmusik und leiser Gesang erschallt.',
+					textLang: 'de',
+					author: 'Lea',
+					authorLang: 'de',
+				},
+				{
+					text: 'You are a famous stupendous badass.',
+				},
+				{
+					text: 'Ich bewundere, dass du immer die interessantesten Fragen stellst.',
+					textLang: 'de',
+					author: 'Lilli',
+					authorLang: 'de',
+				},
+				{
+					text: 'Johl: Im Tresor hat noch nie ein besserer DJ aufgelegt als du!',
+					textLang: 'de',
+					image: 'IMG_20150905_195414.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Vielen Dank für deinen empathischen Blick auf die Dinge!',
+					textLang: 'de',
+					author: 'Jan',
+					authorLang: 'de',
+				},
+				{
+					text: 'Deine Schauspielkünste bleiben unvergessen! (Foto: 31.01.2013)',
+					textLang: 'de',
+					image: 'IMG_20130131_212012.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'Der Held des OKCupid-Profils',
+					textLang: 'de',
+					author: 'Merle',
+					authorLang: 'de',
+				},
+				{
+					text: 'Such a pleasure meeting you (briefly as It may be), wishing you well in your next projects and endeavours',
+					author: 'Itamar',
+				},
+				{
+					text: 'Undogmatisch, erklärend und verständnisvoll konntest du Brücken spannen zwischen den Neuankömmlingen und den ganz Erfahrenen.',
+					textLang: 'de',
+					author: 'Jan',
+					authorLang: 'de',
+				},
+				{
+					text: 'Danke für deine Arbeit und deinen Einsatz im Betriebsrat. Auch wenn wir manchmal unterschiedliche Seiten vertreten haben, du warst immer fair, höflich, und hast versucht Lösungen zu finden, die für alle von Vorteil sind.',
+					textLang: 'de',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'I appreciate all your words of encouragement and everything.',
+				},
+				{
+					text: 'Bei meinem ersten Mier hast du neben mi(e)r gesessen. :) (Foto: 07.07.2012)',
+					textLang: 'de',
+					image: 'IMG_20120707_032255.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'Thanks for the best calm, down-to-earth and audience-tailored explanations of complex topics. All the best!',
+					author: 'Pablo',
+				},
+				{
+					text: 'Memories of a great show :)',
+					image: 'cybernachtstraum.jpg',
+					author: 'Léa',
+				},
+				{
+					text: 'Who has the best taste in literature?',
+					image: 'you do.gif',
+					author: 'Kris',
+				},
+				{
+					text: 'Du verlierst in unserer Web-Branche das Auge für die guten Dinge im Leben - Kunst und Kultur- nicht',
+					textLang: 'de',
+				},
+				{
+					text: 'hätte hätte Verwertungskette',
+					textLang: 'de',
+				},
+				{
+					text: 'Johl, Konferenzbetreiber auf der ganzen Welt reißen sich um deine Teilnahme. #mozfest',
+					textLang: 'de',
+					image: 'IMG_20151106_132614.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Bester Erklärbär für Wikidata, den WMDE je hatte!',
+					textLang: 'de',
+				},
+				{
+					text: 'Jens, wenn du vors Europaparlament ziehst, müssen sich die Urheberrechtsverschärfer warm anziehen!',
+					textLang: 'de',
+					image: 'IMG_20160201_124423.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Johl, AK5 ist der beste AK weil du Mitglied bist, now and forebber!',
+					textLang: 'de',
+					image: 'download_20180118_204213.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Jenseblümchen! Raus aus "Barcelona", rein nach Barcelona, dank dir in bester Gesellschaft. #hachathon',
+					textLang: 'de',
+					image: 'IMG_20180520_225715.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Johl, du bist der beste Kunstnachahmer von Mexico, ach, von der Welt!',
+					textLang: 'de',
+					image: 'IMG_20150718_205207.jpg',
+					author: 'antischokke',
+					authorLang: 'de',
+				},
+				{
+					text: 'Super duper Kollege im Betriebsrat',
+					textLang: 'de',
+					author: 'Maria',
+					authorLang: 'de',
+				},
+				{
+					text: 'Deine Überzeugung und Begeisterung von freiem Wissen und freier Software ist etwas von dem nicht nur WMDE sondern die Welt allgemein ungeheuer profitiert.',
+					textLang: 'de',
+				},
+				{
+					text: 'I wish you the best of luck and continued success wherever you may find yourself.',
+				},
+				{
+					text: `"Life's a happy song with someone by your side to sing along" - especially with you at Karaoke.`,
+				},
+				{
+					text: 'Echt toll, wie du andere motivieren kannst.',
+					textLang: 'de',
+				},
+				{
+					text: 'Heute schon ein Stoofvlees angesetzt?',
+					textLang: 'de',
+					author: 'Linda',
+					authorLang: 'de',
+				},
+				{
+					text: 'schade, dass wir so wenig miteinander zu tun hatten. du hast mich dennoch immer inspiriert. ich vermute du sorgst unbeabsichtigt dafür, dass menschen in deiner gegenwart bessere menschen sein wollen. das ist toll!',
+					textLang: 'de',
+					author: 'noelle',
+					authorLang: 'de',
+				},
+				{
+					text: "“May your life be filled with magic and dreams and good madness. I hope you read some fine books and kiss someone who thinks you're wonderful, and don't forget to make some art -- write or draw or build or sing or live as only you can. And I hope, somewhere in the next year, you surprise yourself.”",
+				},
+				{
+					text: 'Was für ein humorvoller Mensch du bist! Das gefällt mir gut!',
+					textLang: 'de',
+				},
+				{
+					text: 'Du hast mir immer am besten dabei geholfen, meinen Nerd-Anteil nicht aus den Augen zu verlieren.',
+					textLang: 'de',
+					author: 'Christof',
+					authorLang: 'de',
+				},
+				{
+					text: "Dear Jens, you are a cornerstone of this organisation, especially for Wikidata/Wikibase. I always appreciated your anecdotes and stories, and you were so knowledgable about SO MANY THINGS o/ I always found that very impressive. I'm proud to have worked with you on the very first compliments button (pic related) and what better way to honor your time here than to to give this compliment generator to you as a farewell present. I hope you have only amazing times ahead. You will be dearly missed.",
+					image: 'arrow.png',
+				},
+				{
+					text: 'Thanks for embracing the word looksy and deploying it at every possible opportunity!',
+					author: 'George',
+				},
+				{
+					text: 'Danke dass du mich in den faszinierenden Untergrund von Berlin eingeführt hast! (Foto: 07.07.2012)',
+					textLang: 'de',
+					image: 'IMG_20120707_041527.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'Die ersten Wochen von Wikidata. Ach was waren wir jung! (Foto: 13.04.2012)',
+					textLang: 'de',
+					image: 'IMG_20120413_170231.jpg',
+					author: 'Tobi G.',
+					authorLang: 'de',
+				},
+				{
+					text: 'Op-op-op op Oppan Gangnam Style... See you at Monster Ronson - und bis dahin in Gedanken: I bless the rains down in Africa...',
+					author: 'Linda',
+				},
+				{
+					text: 'Johl, du bist der beste Verabschieder der Welt. Auf Wiederhörnchen!',
+					textLang: 'de',
+					author: 'antischokke',
+					authorLang: 'de',
+				}
 			];
 
 			const complimentContainer = document.getElementById('complimentContainer');
