Add image sizes and downscaled versions
Add downscaled versions of each image until the downscaled version would
be less than 608px wide (the effective max-width of the image). The
downscaling was done with `convert FILE.jpg -resize 50% FILE-50.jpg` or
equivalent for 25%. Firefox and Chrome don’t seem to use the smaller
version from the srcset a lot of the time, not sure why, but sometimes
they do, and as far as I can tell nothing’s wrong with the srcset.

--- a/index.html
+++ b/index.html
@@ -258,11 +258,15 @@ via Wikimedia Commons`;
 				{
 					text: "Jens, I'd like to thank you for all the contributions you've made at the Wikibase Live sessions. I’ve learned a lot from working with you over the months. Congratulations on your new job. We will remember you with warm thoughts and memories.",
 					image: '776342f0-86f5-4522-84c9-a02d6b11c766.jpg',
+					imageWidth: 730,
+					imageHeight: 600,
 					author: 'Mohammed',
 				},
 				{
 					text: "You've always been the best Bard of the team, singing beautiful songs about Wikidata all around the world!",
 					image: 'IMG_20170413_101601.jpg',
+					imageWidth: 1134,
+					imageHeight: 851,
 					author: 'Léa',
 				},
 				{
@@ -297,6 +301,11 @@ via Wikimedia Commons`;
 					text: 'Jenseblümchen, San Frantschüssco, Tschüssikowski und hoffentlich bis Baldrian!',
 					textLang: 'de',
 					image: '6231396458236133.jpg',
+					imageWidth: 1632,
+					imageHeight: 1224,
+					imageSrcset: {
+						816: '6231396458236133-50.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -310,6 +319,11 @@ via Wikimedia Commons`;
 					text: 'Ohne dich wüsste ich heute nicht, wer die Berlin Bombshells sind und eine faszinierende Sportart wäre mir unbekannt geblieben. (Foto: 18.11.2012)',
 					textLang: 'de',
 					image: 'IMG_20121118_190153.jpg',
+					imageWidth: 2048,
+					imageHeight: 1536,
+					imageSrcset: {
+						1024: 'IMG_20121118_190153-50.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
@@ -317,6 +331,11 @@ via Wikimedia Commons`;
 					text: 'Nicht nur bei unserer ersten WMDE Weihnachtsfeier hast du deine Kochkünste bewiesen. (Foto: 02.11.2012)',
 					textLang: 'de',
 					image: 'IMG_20121102_152852.jpg',
+					imageWidth: 1536,
+					imageHeight: 2048,
+					imageSrcset: {
+						768: 'IMG_20121102_152852-50.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
@@ -333,6 +352,8 @@ via Wikimedia Commons`;
 				{
 					text: 'Without you, this place will be different. I will miss you very much!',
 					image: 'giphy.gif',
+					imageWidth: 350,
+					imageHeight: 206,
 				},
 				{
 					text: 'Bist der beste tech zu non-tech Übersetzer wo gibt.',
@@ -344,6 +365,12 @@ via Wikimedia Commons`;
 					text: 'Johl, dein Ukulenlenspiel erwärmt Herzen und Mitgliederversammlungen. #Bambärch',
 					textLang: 'de',
 					image: 'IMG_20170617_211229.jpg',
+					imageWidth: 3024,
+					imageHeight: 4032,
+					imageSrcset: {
+						1512: 'IMG_20170617_211229-50.jpg',
+						756: 'IMG_20170617_211229-25.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -398,6 +425,8 @@ via Wikimedia Commons`;
 				{
 					text: 'I will forever remain envious of the breadth and depths of your knowledge',
 					image: 'so smart.gif',
+					imageWidth: 575,
+					imageHeight: 291,
 					author: 'Kris',
 				},
 				{
@@ -412,12 +441,19 @@ via Wikimedia Commons`;
 					text: 'Ich bin mir sicher ohne dich, würde ich Berlin heute nicht so gut kennen (und nicht so schätzen). Danke! (Foto: 23.09.2013)',
 					textLang: 'de',
 					image: 'C360_2013-09-23-18-27-48-702.jpg',
+					imageWidth: 1536,
+					imageHeight: 2048,
+					imageSrcset: {
+						768: 'C360_2013-09-23-18-27-48-702-50.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
 				{
 					text: "Thanks for all the time spent together in the same room! Thanks for our discussions about everything, from politics to Game of Thrones, in multiple languages, for the support when I needed it. We'll miss you in the Château <3",
 					image: 'IMG_20180102_104106.jpg',
+					imageWidth: 922,
+					imageHeight: 628,
 					author: 'Léa',
 				},
 				{
@@ -441,6 +477,11 @@ via Wikimedia Commons`;
 				{
 					text: 'Where would be brie without you?',
 					image: 'brie.jpg',
+					imageWidth: 1242,
+					imageHeight: 2208,
+					imageSrcset: {
+						621: 'brie-50.jpg',
+					},
 				},
 				{
 					text: 'You can always surprise a person by knowing their local political situation even if they are from less well known countries.',
@@ -452,6 +493,8 @@ via Wikimedia Commons`;
 				{
 					text: 'Nobody does it feta',
 					image: 'feta_cheese.jpg',
+					imageWidth: 770,
+					imageHeight: 503,
 				},
 				{
 					text: 'Jens is always so helpful and informative, we will miss you!',
@@ -463,6 +506,11 @@ via Wikimedia Commons`;
 					text: 'Jenseblümchen! Jedes Duett mit dir bleibt unvergessen und unerreicht.',
 					textLang: 'de',
 					image: 'IMG_20170510_003740.jpg',
+					imageWidth: 1280,
+					imageHeight: 960,
+					imageSrcset: {
+						640: 'IMG_20170510_003740-50.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -485,6 +533,12 @@ via Wikimedia Commons`;
 					text: 'Johl: Im Tresor hat noch nie ein besserer DJ aufgelegt als du!',
 					textLang: 'de',
 					image: 'IMG_20150905_195414.jpg',
+					imageWidth: 2448,
+					imageHeight: 3264,
+					imageSrcset: {
+						1224: 'IMG_20150905_195414-50.jpg',
+						612: 'IMG_20150905_195414-25.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -498,6 +552,12 @@ via Wikimedia Commons`;
 					text: 'Deine Schauspielkünste bleiben unvergessen! (Foto: 31.01.2013)',
 					textLang: 'de',
 					image: 'IMG_20130131_212012.jpg',
+					imageWidth: 3264,
+					imageHeight: 2448,
+					imageSrcset: {
+						1632: 'IMG_20130131_212012-50.jpg',
+						816: 'IMG_20130131_212012-25.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
@@ -530,6 +590,11 @@ via Wikimedia Commons`;
 					text: 'Bei meinem ersten Mier hast du neben mi(e)r gesessen. :) (Foto: 07.07.2012)',
 					textLang: 'de',
 					image: 'IMG_20120707_032255.jpg',
+					imageWidth: 1536,
+					imageHeight: 2048,
+					imageSrcset: {
+						768: 'IMG_20120707_032255-50.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
@@ -540,11 +605,18 @@ via Wikimedia Commons`;
 				{
 					text: 'Memories of a great show :)',
 					image: 'cybernachtstraum.jpg',
+					imageWidth: 1280,
+					imageHeight: 720,
+					imageSrcset: {
+						640: 'cybernachtstraum-50.jpg',
+					},
 					author: 'Léa',
 				},
 				{
 					text: 'Who has the best taste in literature?',
 					image: 'you do.gif',
+					imageWidth: 220,
+					imageHeight: 165,
 					author: 'Kris',
 				},
 				{
@@ -559,6 +631,11 @@ via Wikimedia Commons`;
 					text: 'Johl, Konferenzbetreiber auf der ganzen Welt reißen sich um deine Teilnahme. #mozfest',
 					textLang: 'de',
 					image: 'IMG_20151106_132614.jpg',
+					imageWidth: 1280,
+					imageHeight: 960,
+					imageSrcset: {
+						640: 'IMG_20151106_132614-50.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -570,6 +647,12 @@ via Wikimedia Commons`;
 					text: 'Jens, wenn du vors Europaparlament ziehst, müssen sich die Urheberrechtsverschärfer warm anziehen!',
 					textLang: 'de',
 					image: 'IMG_20160201_124423.jpg',
+					imageWidth: 2448,
+					imageHeight: 3264,
+					imageSrcset: {
+						1224: 'IMG_20160201_124423-50.jpg',
+						612: 'IMG_20160201_124423-25.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -577,6 +660,11 @@ via Wikimedia Commons`;
 					text: 'Johl, AK5 ist der beste AK weil du Mitglied bist, now and forebber!',
 					textLang: 'de',
 					image: 'download_20180118_204213.jpg',
+					imageWidth: 2048,
+					imageHeight: 1536,
+					imageSrcset: {
+						1024: 'download_20180118_204213-50.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -584,6 +672,12 @@ via Wikimedia Commons`;
 					text: 'Jenseblümchen! Raus aus "Barcelona", rein nach Barcelona, dank dir in bester Gesellschaft. #hachathon',
 					textLang: 'de',
 					image: 'IMG_20180520_225715.jpg',
+					imageWidth: 4608,
+					imageHeight: 3456,
+					imageSrcset: {
+						2304: 'IMG_20180520_225715-50.jpg',
+						1152: 'IMG_20180520_225715-25.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -591,6 +685,12 @@ via Wikimedia Commons`;
 					text: 'Johl, du bist der beste Kunstnachahmer von Mexico, ach, von der Welt!',
 					textLang: 'de',
 					image: 'IMG_20150718_205207.jpg',
+					imageWidth: 2448,
+					imageHeight: 3264,
+					imageSrcset: {
+						1224: 'IMG_20150718_205207-50.jpg',
+						612: 'IMG_20150718_205207-25.jpg',
+					},
 					author: 'antischokke',
 					authorLang: 'de',
 				},
@@ -642,6 +742,8 @@ via Wikimedia Commons`;
 				{
 					text: "Dear Jens, you are a cornerstone of this organisation, especially for Wikidata/Wikibase. I always appreciated your anecdotes and stories, and you were so knowledgable about SO MANY THINGS o/ I always found that very impressive. I'm proud to have worked with you on the very first compliments button (pic related) and what better way to honor your time here than to to give this compliment generator to you as a farewell present. I hope you have only amazing times ahead. You will be dearly missed.",
 					image: 'arrow.png',
+					imageWidth: 1052,
+					imageHeight: 1488,
 				},
 				{
 					text: 'Thanks for embracing the word looksy and deploying it at every possible opportunity!',
@@ -651,6 +753,11 @@ via Wikimedia Commons`;
 					text: 'Danke dass du mich in den faszinierenden Untergrund von Berlin eingeführt hast! (Foto: 07.07.2012)',
 					textLang: 'de',
 					image: 'IMG_20120707_041527.jpg',
+					imageWidth: 1536,
+					imageHeight: 2048,
+					imageSrcset: {
+						768: 'IMG_20120707_041527-50.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
@@ -658,6 +765,11 @@ via Wikimedia Commons`;
 					text: 'Die ersten Wochen von Wikidata. Ach was waren wir jung! (Foto: 13.04.2012)',
 					textLang: 'de',
 					image: 'IMG_20120413_170231.jpg',
+					imageWidth: 1536,
+					imageHeight: 2048,
+					imageSrcset: {
+						768: 'IMG_20120413_170231-50.jpg',
+					},
 					author: 'Tobi G.',
 					authorLang: 'de',
 				},
