Add lang+dir to <html> and support setting it on compliments
The text and author of a compliment can now be set to a different
language and/or directionality. The recommendation is to only declare
this when it differs from the <html> ones though, to avoid overhead.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang=en dir=ltr>
 	<head>
 		<title>Goodbye, Jens</title>
 		<meta charset=utf-8>
@@ -253,6 +253,12 @@ via Wikimedia Commons`;
 					text: 'Here goes the text for a short compliment.',
 				},
 				{
+					text: 'Dies ist der Text für ein kurzes Kompliment',
+					textLang: 'de',
+					author: 'Verfasser',
+					authorLang: 'de',
+				},
+				{
 					text: 'Here goes the text for a very long compliment that spans multiple lines and talks about how great Jens is.',
 					image: 'Placeholder.png',
 					imageSrcset: {
@@ -313,6 +319,8 @@ via Wikimedia Commons`;
 					}
 					complimentContainer.append(complimentText);
 					complimentText.textContent = compliment.text;
+					updateAttribute(complimentText, 'lang', compliment.textLang);
+					updateAttribute(complimentText, 'dir', compliment.textDir);
 				} else {
 					if (complimentText !== null) {
 						complimentText.remove();
@@ -435,6 +443,8 @@ via Wikimedia Commons`;
 					}
 					complimentContainer.append(complimentAuthor);
 					complimentAuthor.textContent = compliment.author;
+					updateAttribute(complimentAuthor, 'lang', compliment.authorLang);
+					updateAttribute(complimentAuthor, 'dir', compliment.authorDir);
 				} else {
 					if (complimentAuthor !== null) {
 						complimentAuthor.remove();
